# mako

./: Cargo.toml  Dockerfile  README.md  compose.yaml  init.sql  keyline-config.yaml  todo
.github/workflows/: lint.yaml  release.yaml
api_client/: Cargo.toml
api_client/src/: acl.rs  auth.rs  errors.rs  lib.rs  namespaces.rs  oidc.rs  values.rs
api_server/: Cargo.toml
api_server/migrations/initial/: upgrade.sql
api_server/src/: cache.rs  main.rs
api_server/src/api/: acl.http  acl.rs  errors.rs  mod.rs  namespaces.http  namespaces.rs  values.http  values.rs
api_server/src/auth/: mod.rs  user.rs
api_server/src/extractors/: auth.rs
api_server/src/repositories/: mod.rs  namespaces.rs  permissions.rs  values.rs
api_server/src/repositories/rqlite/: context.rs  namespaces.rs  permissions.rs  values.rs
cli/: Cargo.toml
cli/src/: main.rs  output.rs
cli/src/commands/: mod.rs
cli/src/commands/acl/: delete.rs  get.rs  list.rs  mod.rs  set.rs
cli/src/commands/auth/: login.rs
cli/src/commands/namespaces/: create.rs  delete.rs  list.rs  list_kvs.rs  mod.rs
cli/src/commands/values/: delete.rs  get.rs  set.rs
migrations/initial/: upgrade.sql
shared/src/: lib.rs
shared/src/dtos/: mod.rs  namespaces.rs  permissions.rs  values.rs
src/: main.rs
src/api/: mod.rs  namespaces.http  namespaces.rs  values.http  values.rs
src/repositories/: context.rs  mod.rs  namespaces.rs
src/repositories/rqlite/: context.rs  mod.rs  namespaces.rs  values.rs
