[package]
name = "mako"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = {version="1.0.210", features=["derive"]}
serde_json = "1.0.149"
actix-web = "4"
clap = { version = "4.5.54", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
rust-embed = "8.11.0"
rqlite_client = { version = "0.1.0", features = ["migration", "migration_embed"]}
