[package]
name = "mako"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
actix-web = "4"
clap = { version = "4.5.54", features = ["derive", "env"] }
log = "0.4.29"
env_logger = "0.11.8"
rust-embed = "8.11.0"
rqlite_client = { version = "0.1.0", features = ["migration", "migration_embed"]}
shared = { path = "../shared"}
futures = "0.3.32"
dashmap = "7.0.0-rc2"
reqwest = {version = "0.13.2", features = ["json"]}
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
