[package]
name = "mako_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
env_logger = "0.11.9"
log = "0.4.29"
mako_client = { path = "../api_client" }
shared = { path = "../shared" }
anyhow = "1.0.102"
tokio = { version = "1.49.0", features = ["full"] }
